--- a/src/global.css
+++ b/src/global.css
@@ -4,13 +4,13 @@
 
 @layer base {
   h1 {
-    @apply text-7xl;
+    @apply text-3xl;
   }
   h2 {
-    @apply text-4xl;
+    @apply text-2xl;
   }
   h3 {
-    @apply text-2xl;
+    @apply text-xl;
   }
 
   li {
